# python-backend-micro-service

./: .gitignore  Dockerfile.local  README.md  docker-compose.prod.yml  docker-compose.stag.yml  docker-compose.yml  pyproject.toml
config/env/: python-template-service..production.env  python-template-service..staging.env
config/secrets/: secret-python-template-service.env
deployment/eks/: deployment.yaml  ingress.yaml  secret.yaml
deployment/minikube/: configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml
src/: main.py
src/common/: config.py
src/common/databases/dynamoDB/: __init__.py  client.py  setup.py
src/common/databases/dynamoDB/fixtures/: mock_student_teacher_relationships.py
src/common/databases/dynamoDB/interfaces/: __init__.py  client_interface.py
src/common/databases/dynamoDB/models/: __init__.py  student_teacher_relationship.py
src/common/exceptions/: __init__.py  exceptions_config.py
src/common/loggers/: __init__.py  logging_config.py
src/common/s3/: __init__.py  s3_controller.py  s3_service.py
src/common/s3/interfaces/: __init__.py  s3_service_interface.py
src/common/s3/schemas/: __init__.py  s3_schemas.py
src/common/s3/tests/: conftest.py  s3_service_test.py
src/health/: health_controller.py  health_service.py
src/health/interfaces/: __init__.py  health_service_interface.py
src/health/schemas/: __init__.py  health_schemas.py
src/health/tests/: conftest.py  health_service_test.py
